<resources>

    <string name="app_name">RoomDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="deletebuttonthing">deleteButton</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>

</resources>